syntax="proto3";
import "room.proto";
import "room_type.proto";
package proto;


option go_package = "./pkg/pb";

service BookingService {
  rpc CreateBooking(CreateBookingRequest) returns (CreateBookingResponse);
  rpc DeleteBooking(DeleteBookingRequest) returns (Empty);
  rpc GetBookingsForCustomer(GetBookingsForCustomerRequest) returns (GetBookingForCustomerResponse);
  rpc UpdateBooking(UpdateBookingRequest) returns (UpdateBookingResponse);
  rpc GetAllBookings(Empty) returns (GetAllBookingsResponse);
}

message Booking {
  string customer_id = 1;
  Room room = 2;
  string check_in_date = 3;
  string check_out_date = 4;
  int32 total_price = 5;
}

// =================================================================
// Create Booking
message CreateBookingRequest {
  string customer_id = 1;
  Room room = 2;
  string check_in_date = 3;
  string check_out_date = 4;
}

message CreateBookingResponse {
  string id = 1;
  int32 total_price = 2;
}

// =================================================================
// Delete Booking

message DeleteBookingRequest {
  string booking_id = 1;
}

// =================================================================
// Get Booking By Id

message GetBookingsForCustomerRequest {
  string customer_id = 1;
}

message GetBookingForCustomerResponse {
  repeated Booking bookings = 1;
}

// =================================================================
// Update Booking

message UpdateBookingRequest {
  Room room = 1;
  string check_in_date = 2;
  string check_out_date = 3;
}

message UpdateBookingResponse {
  string message = 1;
}

// =================================================================
// Get All Bookings

message GetAllBookingsResponse {
  repeated Booking bookings = 1;
}